k8s_sanic/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanic-app-service  # Service名称
spec:
  selector:
    app: sanic-app # 匹配Pod标签
  ports:
    - port: 80 # Service端口
      targetPort: 8000 # 容器端口
      protocol: TCP
      nodePort: 30080
  type: NodePort #服务类型：ClusterIP NodePort LoadBalancer
